<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/store_info_background"
    tools:context=".WoolworthsStoreActivity"
    >

    <!--Heading: Woolworths-->
    <TextView
        android:id="@+id/woolworths_store_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/woolworths_discount_heading"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_marginTop="40sp"
        android:layout_marginStart="35sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <!--Image: Physical of the store-->
    <ImageView
        android:id="@+id/woolworths_physical_store_image"
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        android:src="@drawable/woolworths_store"
        android:layout_marginTop="160sp"
        android:layout_marginStart="60sp"
        />

    <!--Address: Bedford center Address-->
    <TextView
        android:id="@+id/woolworths_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Woolworths_Address_Label"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="420sp"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <!--Paragraph: PicknPay-->
    <TextView
        android:id="@+id/woolworths_paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Woolworths_paragraph"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="500sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <!--Confirm Button-->
    <Button
        android:id="@+id/login_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_productsbtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="640sp"
        android:layout_marginStart="90sp"
        android:layout_marginEnd="20sp"
        android:backgroundTint="@color/store_purple"
        android:padding="20sp"/>

    <!--Bottom Navigation Bar:-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_bar"
        app:itemTextColor="@drawable/menu_bar_on_select"
        app:itemIconTint="@drawable/menu_bar_on_select"
        android:background="@drawable/menu_bar_shape"
        android:layout_height="wrap_content"/>
</RelativeLayout>