<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain_background"
    tools:context=".AccountActivity">

    <!-- Main heading: Account-->
    <TextView
        android:id="@+id/landing_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_heading"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="85sp"
        android:layout_marginTop="55sp"
        />

    <!--Name Label-->
    <TextView
        android:id="@+id/account_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="150sp"
        android:layout_marginStart="40sp"
        android:gravity="center"
        />

    <!--Surname Label-->
    <TextView
        android:id="@+id/account_surname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/account_name_text"
        android:layout_marginStart="40sp"
        android:gravity="center"
        />

    <!--Email Label-->
    <TextView
        android:id="@+id/account_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/account_surname_text"
        android:layout_marginStart="40sp"
        android:gravity="center"
        />

    <!--Button: edit button-->
    <Button
        android:id="@+id/account_edit_button"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90sp"
        android:layout_marginTop="280sp"
        android:backgroundTint="@color/menu_blue"
        android:padding="15sp"
        android:text="@string/account_editBtn"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />

    <!--Button: delete button-->
    <Button
        android:id="@+id/account_delete_button"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90sp"
        android:layout_marginTop="380sp"
        android:backgroundTint="@color/menu_blue"
        android:padding="15sp"
        android:text="@string/account_deleteBtn"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />

    <!--Button: logout button-->
    <Button
        android:id="@+id/account_logout_button"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90sp"
        android:layout_marginTop="480sp"
        android:backgroundTint="@color/menu_blue"
        android:padding="15sp"
        android:text="@string/account_logoutBtn"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />


    <!--Bottom Navigation Bar:-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_bar"
        app:itemTextColor="@drawable/menu_bar_on_select"
        app:itemIconTint="@drawable/menu_bar_on_select"
        android:background="@drawable/menu_bar_shape"
        android:layout_height="wrap_content"/>

</RelativeLayout>